--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-tailwind-capacitor",
+  "name": "supabase=nextjs-tailwind-capacitor",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -19,6 +19,7 @@
     "@capacitor/status-bar": "^1.0.1",
     "@ionic/react": "^6.1.12",
     "@ionic/react-router": "^6.1.12",
+    "@supabase/supabase-js": "^2.0.0-rc.4",
     "autoprefixer": "^10.2.6",
     "classnames": "^2.2.6",
     "next": "^12.2.0",
