--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "com.example.app",
+	"appId": "com.supabasenextionic.app",
 	"appName": "nextjs-tailwind-capacitor",
 	"bundledWebRuntime": false,
 	"npmClient": "npm",
