--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "com.example.app",
+	"appId": "com.supabasenextionic.app",
 	"appName": "nextjs-tailwind-capacitor",
 	"bundledWebRuntime": false,
 	"npmClient": "npm",
