--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.0.0-rc.4",
     "autoprefixer": "^10.2.6",
     "classnames": "^2.2.6",
+    "cordova-plugin-customurlscheme": "^5.0.2",
     "next": "^12.2.0",
     "postcss": "^8.3.5",
     "react": "^18.2.0",
